--- a/index.html
+++ b/index.html
@@ -12,29 +12,33 @@
   <body>
     <div class="container">
       <div class="output-box">
-        <div class="user-output">
+        <div class="player-output-box">
           <strong class="player-name">You</strong>
           <div class="player-output player-output-user"></div>
         </div>
         <strong class="game-info">vs</strong>
-        <div class="environment-output">
+        <div class="player-output-box">
           <strong class="player-name">Me</strong>
           <div class="player-output player-output-environment"></div>
         </div>
       </div>
       <div class="input-box">
+        <h3>Choose to play</h3>
         <div class="user-input">
           <div class="rock-box">
-            <div class="rock"></div>
-            <div class="option-name">rock</div>
+            <div class="rock option">
+              <img src="svg/rock.svg" alt="">
+            </div>
           </div>
           <div class="paper-box">
-            <div class="paper"></div>
-            <div class="option-name">paper</div>
+            <div class="paper option">
+              <img src="svg/paper.svg" alt="">
+            </div>
           </div>
           <div class="scissors-box">
-            <div class="scissors"></div>
-            <div class="option-name">scissors</div>
+            <div class="scissors option">
+              <img src="svg/scissors.svg" alt="">
+            </div>
           </div>
         </div>
       </div>
