--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <div class="output-box">
         <div class="player-output-box">
           <strong class="player-name">You</strong>
-          <div class="player-output player-output-user"></div>
+          <div class="player-output player-output-user" data-output-svg="player"></div>
         </div>
         <strong class="game-info">vs</strong>
         <div class="player-output-box">
           <strong class="player-name">Me</strong>
-          <div class="player-output player-output-environment"></div>
+          <div class="player-output player-output-environment" data-output-svg="computer"></div>
         </div>
       </div>
       <div class="input-box">
@@ -27,17 +27,17 @@
         <div class="user-input">
           <div class="rock-box">
             <div class="rock option">
-              <img src="svg/rock.svg" alt="">
+              <img src="svg/rock.svg" alt="rock" data-option="rock" class="option-svg">
             </div>
           </div>
           <div class="paper-box">
             <div class="paper option">
-              <img src="svg/paper.svg" alt="">
+              <img src="svg/paper.svg" alt="paper" data-option="paper" class="option-svg">
             </div>
           </div>
           <div class="scissors-box">
             <div class="scissors option">
-              <img src="svg/scissors.svg" alt="">
+              <img src="svg/scissors.svg" alt="scissors" data-option="scissors" class="option-svg">
             </div>
           </div>
         </div>
