--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="overlay"></div>
+    <div class="end-window">
+      <div class="winner"></div>
+      <div class="score-box">
+        <div class="player-score-box">
+          <strong class="player-name">You</strong>
+          <div class="player-score"></div>
+        </div>
+        <div class="player-score-box">
+          <strong class="player-name">Computer</strong>
+          <div class="computer-score"></div>
+        </div>
+      </div>
+      <div class="reset-btn-box">
+        <button class="reset-btn">Try again</button>
+      </div>
+    </div>
     <div class="container">
       <div class="output-box">
         <div class="player-output-box">
@@ -18,7 +35,7 @@
         </div>
         <strong class="game-info">vs</strong>
         <div class="player-output-box">
-          <strong class="player-name">Me</strong>
+          <strong class="player-name">Computer</strong>
           <div class="player-output player-output-environment" data-output-svg="computer"></div>
         </div>
       </div>
